chore: remove warnings